Use more modern java